# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL-matkakorttien_hallinta.md  monopoli.md
src/: index.py  initialize_database.py
src/entities/: user.py
src/repositories/: uno_repository.py
src/services/: cards_service.py  uno_service.py
src/tests/: cards_service_test.py  uno_service_test.py
src/ui/: ui.py
